// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Text" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders as block 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders bold 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders centered 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders light 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders muted 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders no wrap 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with color 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with size 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with textTransform 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with truncation 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  </span>
</div>
`;

exports[`Utility components renders Bold 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Bold
  </span>
</div>
`;

exports[`Utility components renders Large 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Large
  </span>
</div>
`;

exports[`Utility components renders Muted 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Muted
  </span>
</div>
`;

exports[`Utility components renders Small 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Small
  </span>
</div>
`;

exports[`Utility components renders Uppercase 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Uppercase
  </span>
</div>
`;
